--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
     api: pruebas de API, requiere aplicacion en ejecucion
+    readonly: tests para peticiones GET
+    write: tests para peticiones que POST, PUT, DELETE 
